[gd_scene load_steps=10 format=2]

[ext_resource path="res://overlap/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_pedo/assets/png/efecto acido sheet.png" type="Texture" id=2]
[ext_resource path="res://levels/level_pedo/assets/png/boss_2_sheet.png" type="Texture" id=3]
[ext_resource path="res://levels/level_pedo/enemy/boss_2.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.3077
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.654
height = 98.8303

[sub_resource type="Animation" id=3]
resource_name = "rage"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 9, 8, 8, 9, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "heal"
}, {
"args": [  ],
"method": "heal"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 240.589

[node name="boss_2" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( 1.89539, -69.0357 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -153.4 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.79339, 96.265 )
shape = SubResource( 1 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
position = Vector2( 1.68176, 3.36362 )
collision_layer = 16
collision_mask = 2
script = null

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -2.95326, 36.5461 )
shape = SubResource( 2 )

[node name="effectTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="lifeRed" type="ColorRect" parent="."]
margin_left = -21.2378
margin_top = -94.5661
margin_right = 18.7622
margin_bottom = -92.5661
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeGreen" type="ColorRect" parent="."]
margin_left = -21.2378
margin_top = -94.5661
margin_right = 18.7622
margin_bottom = -92.5661
color = Color( 0.168627, 0.992157, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rage = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3.24889, -29.6029 )
scale = Vector2( 0.334044, 0.343209 )
texture = ExtResource( 2 )
hframes = 3

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 22.6928, 35.589 )
scale = Vector2( 0.65907, 0.686339 )
texture = ExtResource( 3 )
hframes = 10

[node name="healArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="healArea"]
position = Vector2( -2.0768, 89.3279 )
shape = SubResource( 5 )

[node name="buffTimer" type="Timer" parent="."]

[node name="stateTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="effectTimer" to="." method="_on_effectTimer_timeout"]
[connection signal="timeout" from="buffTimer" to="." method="_on_buffTimer_timeout"]
[connection signal="timeout" from="stateTimer" to="." method="_on_stateTimer_timeout"]

[editable path="HurtBox"]
